--- a/CandleTimeSeriesAnalysis.csproj
+++ b/CandleTimeSeriesAnalysis.csproj
@@ -62,6 +62,18 @@
     <Compile Include="CandleTimeSeriesPlotInfo.cs" />
     <Compile Include="ExtensionsIEnumerableCandle.cs" />
     <Compile Include="ExtensionsIEnumerableTrade.cs" />
+    <Compile Include="Indicators\AverageDirectionalMovementIndex.cs" />
+    <Compile Include="Indicators\AverageDirectionalMovementMinus.cs" />
+    <Compile Include="Indicators\AverageDirectionalMovementPlus.cs" />
+    <Compile Include="Indicators\AverageTrueRange.cs" />
+    <Compile Include="Indicators\DirectionalIndicatorMinus.cs" />
+    <Compile Include="Indicators\DirectionalIndicatorPlus.cs" />
+    <Compile Include="Indicators\DirectionalMovementIndex.cs" />
+    <Compile Include="Indicators\DirectionalMovementMinus.cs" />
+    <Compile Include="Indicators\DirectionalMovementPlus.cs" />
+    <Compile Include="Indicators\IIndicator.cs" />
+    <Compile Include="Indicators\Indicator.cs" />
+    <Compile Include="Indicators\TrueRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trade.cs" />
   </ItemGroup>
