--- a/CandleTimeSeriesAnalysis.csproj
+++ b/CandleTimeSeriesAnalysis.csproj
@@ -31,22 +31,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonUtils, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.0\lib\net461\CommonUtils.dll</HintPath>
+      <HintPath>packages\CommonUtils.NET.1.0.4\lib\net461\CommonUtils.dll</HintPath>
     </Reference>
-    <Reference Include="MoreLinq, Version=2.8.21218.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.0\lib\net461\MoreLinq.dll</HintPath>
+    <Reference Include="MoreLinq, Version=2.9.21302.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
+      <HintPath>packages\morelinq.2.9.0\lib\net40\MoreLinq.dll</HintPath>
     </Reference>
     <Reference Include="OxyPlot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.0\lib\net461\OxyPlot.dll</HintPath>
+      <HintPath>packages\CommonUtils.NET.1.0.4\lib\net461\OxyPlot.dll</HintPath>
     </Reference>
     <Reference Include="OxyPlot.WindowsForms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=245eacd6b5d2d338, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.0\lib\net461\OxyPlot.WindowsForms.dll</HintPath>
+      <HintPath>packages\CommonUtils.NET.1.0.4\lib\net461\OxyPlot.WindowsForms.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.0\lib\net461\System.ValueTuple.dll</HintPath>
+      <HintPath>packages\CommonUtils.NET.1.0.4\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
