--- a/CandleTimeSeriesAnalysis.csproj
+++ b/CandleTimeSeriesAnalysis.csproj
@@ -31,22 +31,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonUtils, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.4\lib\net461\CommonUtils.dll</HintPath>
+      <HintPath>packages\CommonUtils.NET.1.0.6\lib\net461\CommonUtils.dll</HintPath>
     </Reference>
-    <Reference Include="MoreLinq, Version=2.9.21302.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
-      <HintPath>packages\morelinq.2.9.0\lib\net40\MoreLinq.dll</HintPath>
+    <Reference Include="MoreLinq, Version=2.10.21623.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
+      <HintPath>packages\morelinq.2.10.0\lib\net40\MoreLinq.dll</HintPath>
     </Reference>
     <Reference Include="OxyPlot, Version=1.0.0.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.4\lib\net461\OxyPlot.dll</HintPath>
+      <HintPath>packages\CommonUtils.NET.1.0.6\lib\net461\OxyPlot.dll</HintPath>
     </Reference>
     <Reference Include="OxyPlot.WindowsForms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=245eacd6b5d2d338, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.4\lib\net461\OxyPlot.WindowsForms.dll</HintPath>
+      <HintPath>packages\CommonUtils.NET.1.0.6\lib\net461\OxyPlot.WindowsForms.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>packages\CommonUtils.NET.1.0.4\lib\net461\System.ValueTuple.dll</HintPath>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.ValueTuple.4.5.0-preview1-26216-02\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="asdf.cs" />
     <Compile Include="Candle.cs" />
     <Compile Include="CandleTimeSeries.cs" />
     <Compile Include="CandleTimeSeriesPlotInfo.cs" />
@@ -75,9 +76,34 @@
     <Compile Include="Indicators\Indicator.cs" />
     <Compile Include="Indicators\TrueRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategies\ITradeActionInfo.cs" />
+    <Compile Include="Strategies\PositionBear.cs" />
+    <Compile Include="Strategies\Broker.cs" />
+    <Compile Include="Strategies\PositionBull.cs" />
+    <Compile Include="Strategies\IBroker.cs" />
+    <Compile Include="Strategies\IPosition.cs" />
+    <Compile Include="Strategies\IStrategy.cs" />
+    <Compile Include="Strategies\ITrader.cs" />
+    <Compile Include="Strategies\ITradeStreamer.cs" />
+    <Compile Include="Strategies\Trader.cs" />
+    <Compile Include="Strategies\IWallet.cs" />
+    <Compile Include="Strategies\Position.cs" />
+    <Compile Include="Strategies\PositionBuilder.cs" />
+    <Compile Include="Strategies\PositionStopConditionBuilder.cs" />
+    <Compile Include="Strategies\PositionStopPricesBuilder.cs" />
+    <Compile Include="Strategies\PredicateExtensions.cs" />
+    <Compile Include="Strategies\PredicateHelper.cs" />
+    <Compile Include="Strategies\Strategy.cs" />
+    <Compile Include="Strategies\StrategyBuilder.cs" />
+    <Compile Include="Strategies\StrategyEnterConditionBuilder.cs" />
+    <Compile Include="Strategies\TradeStreamer.cs" />
+    <Compile Include="Strategies\Wallet.cs" />
     <Compile Include="Trade.cs" />
+    <Compile Include="TradeCandleTransformation.cs" />
+    <Compile Include="TradeType.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
