--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonUtils.NET" version="1.0.6" targetFramework="net461" />
+  <package id="CommonUtils.NET" version="1.0.8" targetFramework="net461" />
   <package id="morelinq" version="2.10.0" targetFramework="net461" />
-  <package id="OxyPlot.Core" version="2015.1.708-alpha" targetFramework="net461" />
-  <package id="OxyPlot.WindowsForms" version="2011.10.1" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net461" />
+  <package id="OxyPlot.WindowsForms" version="1.0.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
